--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   "homepage": "https://github.com/FakeYou/country-distance",
   "dependencies": {
     "d3": "^3.5.5",
-    "topojson": "^1.6.18"
+    "topojson": "^1.6.18",
+    "underscore": "^1.8.2"
   },
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
     "gulp-connect": "^2.2.0",
     "gulp-ignore": "^1.2.1",
-    "gulp-plumber": "^1.0.0"
+    "gulp-jsoncombine": "^1.0.2",
+    "gulp-plumber": "^1.0.0",
+    "gulp-run": "^1.6.6",
+    "vinyl-map": "^1.0.1"
   }
 }
